[tool.poetry]
name = "antakia-core"
version = "0.2.22"
description = "Core modules for AntakIA"
authors = ["Pierre Hulot <pierre@ai-vidence.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.2.0"
scikit-learn = "^1.4.1.post1"
pacmap = "*"
openTSNE = "*"
interpret = "*"
pygam = "*"
lime = "^0.2.0.1"
shap = "^0.43.0"
umap-learn = "^0.5.5"
skope-rules-temp = "*"
scipy = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
mkdocs = "^1.5.3"
mock = "^5.1.0"
pytest = "^8.0.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
